syntax = "proto3";

package gateway.config.v1;

option go_package = "github.com/go-kratos/gateway/api/gateway/config/v1";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

message Gateway {
  string name = 1;
  repeated string hosts = 2;
  repeated Endpoint endpoints = 3;
  // default middlewares
  repeated Middleware middlewares = 4;
}

message Endpoint {
  string method = 1;
  string path = 2;
  string description = 3;
  Protocol protocol = 4;
  google.protobuf.Duration timeout = 5;
  repeated Middleware middlewares = 6;
  repeated Backend backends = 7;
  Retry retry = 8;
}

message Middleware {
  string name = 1;
  google.protobuf.Any options = 2;
}

message Backend  {
  // localhost
  // 127.0.0.1:8000
  // discovery://service_name
  string target = 1;
  HealthCheck health_check = 2;
  optional int64 weight = 3;
}

enum Protocol {
  HTTP = 0;
  GRPC = 1;
}

message HealthCheck {
  string path = 1;
}

message Retry {
  // default attempts is 1
  uint32 attempts = 1 ;
  google.protobuf.Duration per_try_timeout = 2;
  // for http examples: 500-599;429
  // for grpc examples: internal;resource-exhausted;unavailable;cancelled;deadline-exceeded
  repeated string conditions = 3;
  bool allow_tried_nodes = 4;
}