syntax = "proto3";

package gateway.middleware.cors.v1;

option go_package = "github.com/go-kratos/gateway/api/gateway/middleware/cors/v1";

import "google/protobuf/duration.proto";

// Cors middleware config.
message Cors {
  // default is true
  bool allow_credentials = 1;
  repeated string allowed_origins = 2;
  // default is GET/POST
  repeated string allowed_methods = 3;
  // default is Origin/Content-Type/Content-Length
  repeated string allowed_headers = 4;
  repeated string exposed_headers = 5;
  // default is 10 minutes
  google.protobuf.Duration max_age = 6;
}
